# postgraphile

./: Cargo.toml  README.md  compose.yml
.github/workflows/: release-crates.yml
db/: init.sql
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/server/tests/: graphql_tests.rs
src/: entity_generator.rs  error.rs  lib.rs  schema.rs  table.rs
src/db/: error.rs  introspect.rs  mod.rs  operator.rs  pool.rs  query.rs  transaction.rs  watch.rs  where_clause.rs
src/db/query/: delete.rs  insert.rs  select.rs  update.rs
src/extensions/: mod.rs  row.rs
src/graphql/: connection.rs  entity.rs  filter.rs  mod.rs  query.rs  sql_scalar.rs  type_mapping.rs
src/graphql/mutation/: executor.rs  mod.rs
src/graphql/query/: executor.rs  mod.rs  sql.rs
src/models/: config.rs  mod.rs  table.rs  transaction.rs
src/utils/: inflection.rs  mod.rs
tests/: schema_integration_test.rs
