[package]
name = "postgraphile"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-graphql = "7.2.1"
serde = "1"
serde_json = "1"
regex = "1.12.3"
pluralizer = "0.5.0"
tokio-postgres = { version = "0.7.16", features = ["with-serde_json-1", "array-impls"] }
deadpool-postgres = "0.14.1"